--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element1">
+      <div class="element element1">
         <h3>This is text for a div element</h3>
             </div>
-      <div class="element2">
+      <div class="element element2">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element3">
+      <div class="element element3">
         <h3>This is text for a div element</h3>
       </div>
     </section>
