css-exercise-one

--- a/index.html
+++ b/index.html
@@ -5,38 +5,39 @@
     <title></title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
     <nav>
-      <h1 class="example">this example should span the entire page</h1>
+      <h1 class="example">This is a simple CSS exercise for practice purposes.</h1>
     </nav>
     <section>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
       <div class="element element1">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
             </div>
       <div class="element element2">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
       <div class="element element3">
-        <h3>This is text for a div element</h3>
+        <h3>Do it over and over again until it becomes part of who you are.</h3>
       </div>
     </section>
   </body>
